Feature/update versions (#311)
* Improve Demo UI

* Remove checkstyle

* Add try/with ressources for JOOQ

* Code inspection

---------

Co-authored-by: Stemlaur <stemlaur@stemlaur.com>